--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                 <dd>
                   <input type="number" class="form-control" id="txtDays" />
                 </dd>
-                <dt>No of Person</dt>
+                <!-- <dt>No of Person</dt>
                 <dd>
                   <input type="number" class="form-control" id="txtPerson" />
-                </dd>
+                </dd> -->
               </dl>
             </div>
           </div>
