--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section>
       <div class="accordion" id="hotelForm">
         <div class="accordion-item">
-          <div class="accordion-header mt-4 ms-3 mb-2">
+          <!-- <div class="accordion-header mt-4 ms-3 mb-2"> -->
             <button
               data-bs-target="#customer"
               data-bs-toggle="collapse"
@@ -44,10 +44,10 @@
                 <dd>
                   <input type="number" class="form-control" id="txtDays" />
                 </dd>
-                <!-- <dt>No of Person</dt>
+                <dt>No of Person</dt>
                 <dd>
                   <input type="number" class="form-control" id="txtPerson" />
-                </dd> -->
+                </dd>
               </dl>
             </div>
           </div>
