--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section>
       <div class="accordion" id="hotelForm">
         <div class="accordion-item">
-          <!-- <div class="accordion-header mt-4 ms-3 mb-2"> -->
+          <div class="accordion-header mt-4 ms-3 mb-2">
             <button
               data-bs-target="#customer"
               data-bs-toggle="collapse"
